@startuml
class Rubiks_ {
    - Panel panel
    - int previousID
    {static} - Frame instance
    ~ String[] choices

    ~ void addButton(String label, int index)
    + void actionPerformed(ActionEvent e)
    + void processWindowEvent(WindowEvent e)
}
class Runner {
    - String command
    - ImagePlus imp
    ~Runner(String command, ImagePlus imp)
    + void run()
    ~ void runCommand(String command, ImagePlus imp)

}
class algorithm.ByteRubiks {
    + _Rubiks(ImageJ imp, ImageProcessor ip)
    + void encrypt()
    + void decrypt()

}
class algorithm.RGBRubiks {
    + _Rubiks(ImageJ imp, ImageProcessor ip)
    + void encrypt()
    + void decrypt()

}
class util.VectorKeys {
    ~ Vector<BigInteger> cVector
    ~ Vector<BigInteger> rVector
}
abstract class algorithm.Rubiks {
    {abstract} + void encrypt()
    {abstract} + void decrypt()
}
interface ActionListener
class PlugInFrame
class Thread


algorithm.RGBRubiks --|> algorithm.ByteRubiks  : extends
algorithm.RGBRubiks --* Rubiks_ : contains

algorithm.ByteRubiks --* Rubiks_ : contains
algorithm.ByteRubiks --|> algorithm.Rubiks : extends

Rubiks_ --|> PlugInFrame : extends
Rubiks_ --|> ActionListener

Runner --+ Rubiks_ : innerclass
Runner --|> Thread : extends

hide empty members
@enduml